# backend/internal/modules/trainers/dto.go
@@ -9,7 +9,6 @@ import (
 
 type CreateTrainerRequest struct {
 	Email      string  `json:"email"      binding:"required,email"`
-	Password   string  `json:"password"   binding:"required,min=8"`
 	Name       string  `json:"name"       binding:"required"`
 	Speciality *string `json:"speciality"`
 }
